--- a/builds/misc/images-mqtt.yaml
+++ b/builds/misc/images-mqtt.yaml
@@ -14,7 +14,7 @@ jobs:
       vmImage: 'ubuntu-16.04'
 
     variables:
-      imageName: $(registry.address)/azureiotedge/mqttd-linux-amd64:$(Build.BuildNumber)
+      imageName: $(registry.address)/azureiotedge/mqttd-linux-amd64
 
     steps:
       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
@@ -30,26 +30,26 @@ jobs:
       - bash: 'docker push $(imageName)'
         displayName: 'Docker Push'
 
-################################################################################
-  - job: linux_arm32
-################################################################################
-    displayName: Linux ARM32
-    pool:
-      vmImage: 'ubuntu-16.04'
+# ################################################################################
+#   - job: linux_arm32
+# ################################################################################
+#     displayName: Linux ARM32
+#     pool:
+#       vmImage: 'ubuntu-16.04'
 
-    variables:
-      imageName: $(registry.address)/azureiotedge/mqttd-linux-arm32v7:$(Build.BuildNumber)
+#     variables:
+#       imageName: $(registry.address)/azureiotedge/mqttd-linux-arm32v7
 
-    steps:
-      - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
-        displayName: 'Docker Login'
+#     steps:
+#       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
+#         displayName: 'Docker Login'
 
-      - task: Docker@2
-        displayName: Build arm32 image
-        inputs:
-          repository: $(imageName)
-          command: build
-          Dockerfile: mqtt/docker/linux/arm32v7/Dockerfile
+#       - task: Docker@2
+#         displayName: Build arm32 image
+#         inputs:
+#           repository: $(imageName)
+#           command: build
+#           Dockerfile: mqtt/docker/linux/arm32v7/Dockerfile
 
-      - bash: 'docker push $(imageName)'
-        displayName: 'Docker Push'
+#       - bash: 'docker push $(imageName)'
+#         displayName: 'Docker Push'
