--- a/builds/misc/images-mqtt.yaml
+++ b/builds/misc/images-mqtt.yaml
@@ -11,7 +11,7 @@ jobs:
 ################################################################################
     displayName: Linux AMD64
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: 'ubuntu-latest'
 
     variables:
       imageName: $(registry.address)/azureiotedge/mqttd-linux-amd64
@@ -36,7 +36,7 @@ jobs:
 ################################################################################
     displayName: Linux ARM32
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: 'ubuntu-latest'
 
     variables:
       imageName: $(registry.address)/azureiotedge/mqttd-linux-arm32v7
