--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -13,7 +13,11 @@ jobs:
     pool:
       vmImage: 'ubuntu-16.04'
     steps:
-      - template: templates/install-dotnet3.yaml
+      - task: UseDotNet@2
+        displayName: Install .NET Core sdk
+        inputs:
+          packageType: sdk
+          version: 3.0.100
 
       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
         displayName: 'Docker Login'
@@ -166,8 +170,6 @@ jobs:
         inputs:
           packageType: sdk
           version: 2.1.302
-          installationPath: $(Agent.ToolsDirectory)/dotnet
-
       - bash: 'docker login $(registry.address) --username $(registry.user) --password $(registry.password)'
         displayName: 'Docker Login'
 
