--- a/builds/checkin/mqtt.yaml
+++ b/builds/checkin/mqtt.yaml
@@ -75,3 +75,20 @@ jobs:
         displayName: Format Code
       - bash: mqtt/build/linux/clippy.sh
         displayName: Clippy
+
+  ################################################################################
+  - job: compliance_amd64
+    ################################################################################
+    displayName: Compliance amd64
+    dependsOn: check_run_pipeline
+    condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
+    pool:
+      vmImage: "ubuntu-16.04"
+    steps:
+      - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
+        displayName: Set env variables
+      - bash: mqtt/build/linux/install.sh
+        displayName: Install Rust
+      - bash: mqtt/build/linux/compliance.sh
+        displayName: Test
+
