use windows tooling instead

--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -118,8 +118,13 @@ jobs:
           testRunner: VSTest
           testResultsFiles: '$(Agent.TempDirectory)/TestResults/*.trx'
         condition: succeededOrFailed()
-      - script: bash <(curl -s https://codecov.io/bash) -t $(codecov.token) -n "dotnet checkin" -f "$(Agent.TempDirectory)/TestResults/*.trx"
-        displayName: Upload code coverage to codecov
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
+            (New-Object System.Net.WebClient).DownloadFile("<url>", (Join-Path $pwd "Codecov.zip"))
+            Expand-Archive .\Codecov.zip -DestinationPath
+            .\Codecov\codecov.exe -t $(codecov.token) -n "dotnet checkin" -f "$(Agent.TempDirectory)/TestResults/*.trx"
       - task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
         displayName: 'Check build quality'
         inputs:
