--- a/mqtt/docker/linux/amd64/Dockerfile
+++ b/mqtt/docker/linux/amd64/Dockerfile
@@ -13,13 +13,16 @@ FROM ${BASE_IMAGE} AS builder
 # Add our source code.
 ADD . ./
 
-# Fix permissions on source code.
-# RUN sudo chown -R rust:rust /home/rust
-
 # Build our application.
 RUN cargo build -p mqttd --release && strip /home/rust/src/target/x86_64-unknown-linux-musl/release/mqttd
 
-FROM scratch
+FROM busybox
+
+# Add an unprivileged user account for running mqttd	
+ARG MQTTDUSER_ID=1000
+
+RUN adduser -Du ${MQTTDUSER_ID} mqttduser
+
 ENV RUST_LOG=info
 EXPOSE 1883/tcp
 EXPOSE 8883/tcp
@@ -27,4 +30,7 @@ EXPOSE 8883/tcp
 COPY --from=builder \
     /home/rust/src/target/x86_64-unknown-linux-musl/release/mqttd \
     /usr/local/bin/
+
+USER mqttduser
+
 ENTRYPOINT ["/usr/local/bin/mqttd"]
