--- a/mqtt/mqttd/Cargo.toml
+++ b/mqtt/mqttd/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "mqttd"
+description = "mqttd is an MQTT broker to allow local communication"
 version = "0.1.0"
 authors = ["Azure IoT Edge Devs"]
 edition = "2018"
