--- a/builds/ci/mqtt.yaml
+++ b/builds/ci/mqtt.yaml
@@ -9,10 +9,8 @@ jobs:
   - job: compliance_amd64
     ################################################################################
     displayName: Compliance amd64
-    # dependsOn: check_run_pipeline
-    # condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
     pool:
-      vmImage: "ubuntu-16.04"
+      vmImage: "ubuntu-latest"
     steps:
       - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
         displayName: Set env variables
