fix longhaul yaml to have platform specific delay

--- a/builds/e2e/longhaul.yaml
+++ b/builds/e2e/longhaul.yaml
@@ -424,7 +424,7 @@ jobs:
           release.label: 'servercore-lh$(agent.group)'
           test.buildNumber: '$(Build.BuildNumber)'
           test.buildId: '$(Build.BuildId)'
-          test.startDelay: '$(test.startDelay)'
+          test.startDelay: '$(test.startDelay.amd)'
           build.source.branch: '$(Build.SourceBranchName)'
           edgelet.source.branch: '$(edgelet.package.branchName)'
           images.source.branch: '$(images.branchName)'
@@ -508,7 +508,7 @@ jobs:
           release.label: 'iotuap-lh$(agent.group)'
           test.buildNumber: '$(Build.BuildNumber)'
           test.buildId: '$(Build.BuildId)'
-          test.startDelay: '$(test.startDelay)'
+          test.startDelay: '$(test.startDelay.amd)'
           build.source.branch: '$(Build.SourceBranchName)'
           edgelet.source.branch: '$(edgelet.package.branchName)'
           images.source.branch: '$(images.branchName)'
