Make edgeHub log level verbose

--- a/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/appsettings_agent.json
+++ b/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/appsettings_agent.json
@@ -18,7 +18,7 @@
   "EdgeModuleHubServerCAChainCertificateFile": "",
   "EdgeHostHubServerCertificateFile": "",
   "EdgeModuleHubServerCertificateFile": "",
-  "RuntimeLogLevel": "info",
+  "RuntimeLogLevel": "debug",
   "StorageFolder": "",
   "UsePersistentStorage": true,
   "EdgeHubVolumeName": "",
